// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Image test on web Renders Article Image with no caption 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "display": "table",
          "height": 0,
          "overflow": "hidden",
          "paddingBottom": "56.25%",
        }
      }
    >
      <img
        alt=""
        src="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0"
        style={
          Object {
            "display": "block",
            "position": "absolute",
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <div
        style={
          Object {
            "bottom": "0px",
            "left": "0px",
            "position": "absolute",
            "right": "0px",
            "top": "0px",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Article Image test on web does not render Article Image if display is not received 1`] = `
<div>
  <div>
    <div>
      <div
        dir="auto"
      >
        All the latest stories in culture and books.
      </div>
      <div
        dir="auto"
      >
        THE CREDITS
      </div>
    </div>
  </div>
</div>
`;

exports[`Article Image test on web does not render Article Image if ratio is not received 1`] = `
<div>
  <div
    className="responsive-styles__component-fbPFZZ izoVVg"
  >
    <div>
      <div>
        <div
          dir="auto"
        >
          All the latest stories in culture and books.
        </div>
        <div
          dir="auto"
        >
          THE CREDITS
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Article Image test on web does not render Caption on Article Image if both caption and credits are not received 1`] = `
<div>
  <div>
    <div
      style={
        Object {
          "display": "table",
          "height": 0,
          "overflow": "hidden",
          "paddingBottom": "56.25%",
        }
      }
    >
      <img
        alt=""
        src="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F8c029716-97a2-11e7-8c3c-cb45202c3d59.jpg?crop=160%2C90%2C-0%2C-0"
        style={
          Object {
            "display": "block",
            "position": "absolute",
            "width": "100%",
            "zIndex": 1,
          }
        }
      />
      <div
        style={
          Object {
            "bottom": "0px",
            "left": "0px",
            "position": "absolute",
            "right": "0px",
            "top": "0px",
          }
        }
      >
        <div
          style={
            Object {
              "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Article Image test on web renders inline image (landscape) correctly 1`] = `
Array [
  <div
    className="responsive-styles__component-fbPFZZ eDxyJy"
  >
    <div>
      <div
        style={
          Object {
            "display": "table",
            "height": 0,
            "overflow": "hidden",
            "paddingBottom": "66.66666666666667%",
          }
        }
      >
        <img
          alt=""
          src="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F3ac674bc-beb2-11e7-8bb9-94e1372175c0.jpg?crop=5576%2C3717%2C0%2C0"
          style={
            Object {
              "display": "block",
              "position": "absolute",
              "width": "100%",
              "zIndex": 1,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": "0px",
              "left": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="responsive-styles__component-fbPFZZ dsGAlg"
  >
    <div>
      <div>
        <div
          dir="auto"
        >
          All the latest stories in culture and books.
        </div>
        <div
          dir="auto"
        >
          TIMES PHOTOGRAPHER JACK HILL
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Article Image test on web renders inline image (portrait) correctly 1`] = `
Array [
  <div
    className="responsive-styles__component-fbPFZZ eDxyJy"
  >
    <div>
      <div
        style={
          Object {
            "display": "table",
            "height": 0,
            "overflow": "hidden",
            "paddingBottom": "150%",
          }
        }
      >
        <img
          alt=""
          src="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fdb30ed6a-be62-11e7-b58a-4186f6049f2e.jpg?crop=384%2C576%2C0%2C0"
          style={
            Object {
              "display": "block",
              "position": "absolute",
              "width": "100%",
              "zIndex": 1,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": "0px",
              "left": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="responsive-styles__component-fbPFZZ dsGAlg"
  >
    <div>
      <div>
        <div
          dir="auto"
        >
          President Kennedy’s death in 1963 has spawned countless conspiracy theories
        </div>
        <div
          dir="auto"
        >
          BETTMANN
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Article Image test on web renders primary image correctly 1`] = `
Array [
  <div>
    <div>
      <div
        style={
          Object {
            "display": "table",
            "height": 0,
            "overflow": "hidden",
            "paddingBottom": "80%",
          }
        }
      >
        <img
          alt=""
          src="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F7bfd3356-be8c-11e7-8bb9-94e1372175c0.jpg?crop=1500%2C1200%2C0%2C0"
          style={
            Object {
              "display": "block",
              "position": "absolute",
              "width": "100%",
              "zIndex": 1,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": "0px",
              "left": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>,
  <div>
    <div
      className="responsive-styles__component-fbPFZZ izoVVg"
    >
      <div>
        <div>
          <div
            dir="auto"
          >
            From the spreadsheet: 1 Sir Michael Fallon, Admitted placing hand on knee of journalist 15 years ago. 2 Jake Berry, announced he had a baby with a Tory aide after an amicable divorce from his wife. 3 Amber Rudd, had a relationship with Kwasi Kwarteng, who is now an aide to the chancellor. 4 Liam Fox, had to resign over breach of ministerial code after suggestions that his position had benefited his friend Adam Werritty. No allegations were of a sexual nature. 5 Stephen Crabb, sent explicit messages to young women while married. 6 Mark Garnier, admitted asking his secretary to buy sex toys. 7 Liz Truss, had affair with Tory MP Mark Field
          </div>
          <div
            dir="auto"
          >
            THE CREDITS
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Article Image test on web renders secondary image correctly 1`] = `
Array [
  <div>
    <div>
      <div
        style={
          Object {
            "display": "table",
            "height": 0,
            "overflow": "hidden",
            "paddingBottom": "66.66666666666667%",
          }
        }
      >
        <img
          alt=""
          src="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F4476fabc-be54-11e7-b58a-4186f6049f2e.jpg?crop=5760%2C3840%2C0%2C0"
          style={
            Object {
              "display": "block",
              "position": "absolute",
              "width": "100%",
              "zIndex": 1,
            }
          }
        />
        <div
          style={
            Object {
              "bottom": "0px",
              "left": "0px",
              "position": "absolute",
              "right": "0px",
              "top": "0px",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundImage": "linear-gradient(264deg, #F9F9F9 0%, #EDEDED 100%)",
              }
            }
          />
        </div>
      </div>
    </div>
  </div>,
  <div>
    <div>
      <div>
        <div
          dir="auto"
        >
          Sebastian Schwarz, Glyndbourne’s general director, took issue with the BBC
        </div>
        <div
          dir="auto"
        >
          TIMES PHOTOGRAPHER RICHARD POHLE
        </div>
      </div>
    </div>
  </div>,
]
`;
